Remove unwanted templating
Also set version to 0.1.0-dev

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Strategy Builder",
+  "name": "Hold'Em Strategy Builder",
   "icons": [
     {
       "src": "favicon.ico",
