--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holdem-strategy-builder",
-  "version": "0.1.0",
+  "version": "0.1.0-dev",
   "private": true,
   "dependencies": {
     "react": "^16.3.1",
