--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "react/jsx-filename-extension": "off",
         "import/no-named-as-default": "off",
         "import/no-named-as-default-member": "off",
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": "off",
+        "react/default-props-match-prop-types": "off"
     }
 }
